--- a/src/app/e404/e404.component.html
+++ b/src/app/e404/e404.component.html
@@ -1,1 +1,1 @@
-<h1 style="color: white;font-weight: 700;">You have being 404'd</h1>
+<h1 style="color: white;font-weight: 700;">Please be patient and wait for Administrator's Verification</h1>
