--- a/src/app/student/view-chapter-status/view-chapter-status.component.html
+++ b/src/app/student/view-chapter-status/view-chapter-status.component.html
@@ -1,85 +1,80 @@
 <div class="container mb-30">
   <h1>All Status and Notifications</h1>
-  <hr>
-</div>
+</div><hr>
 
 <div class="container">
-  <h2>Proposal Status</h2>
-  <hr>
-</div>
-
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Topic Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600; color:rgb(7, 248, 7)">Done</span>
-  <mat-icon style="margin-right: 10px; color:rgb(0, 255, 0)">done</mat-icon>
-</div>
-
-<div class="container">
-  <hr>
-  <h2>Chapter Submission Status</h2>
-  <hr>
-</div>
-
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Chapter1 Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600; color:rgb(0, 255, 0)">Done</span>
-  <mat-icon style="margin-right: 10px; color:rgb(0, 255, 0)" color="green">done</mat-icon>
-</div>
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Chapter2 Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600;">Pending</span>
-  <mat-icon style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
-</div>
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Chapter3 Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600;">Pending</span>
-  <mat-icon style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
-</div>
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Chapter4 Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600; color:red">Rejected</span>
-  <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
-</div>
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Chapter5 Submission Status</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 600; color:red">Rejected</span>
-  <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
-</div>
-
-<div class="container">
-  <hr>
+  <div class="container">
+    <hr>
+  </div>
   <h2>Appointment Request Status</h2>
-  <hr>
+  <div class="container">
+    <hr>
+  </div>
 </div>
 
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Appointment Status</span>
+<div class="mat-elevation-z20" *ngFor="let app of meetingReq" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">{{app.id}}.</span> &nbsp; &nbsp;
+  <span style="font-weight: 700;">You sent a meeting request for {{app.time}}pm on {{app.date | date}}</span>
   <div class="spacer"></div>
-  <span style="font-weight: 700;">12:30 pm</span>
   <div class="spacer"></div>
-  <span style="font-weight: 600; color:red">Rejected</span>
-  <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
+  <span style="font-weight: 600;">{{app.status}}</span>
+  <mat-icon *ngIf="app.status === 'Accepted'" style="margin-right: 10px; color:#198754">done</mat-icon>
+  <mat-icon *ngIf="app.status === 'Rejected'" style="margin-right: 10px; color:red">close</mat-icon>
+  <mat-icon *ngIf="app.status === 'Pending'" style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
 </div>
-
 
 <div class="container">
-  <hr>
+  <div class="container">
+    <hr>
+  </div>
   <h2>Invitations</h2>
-  <hr>
+  <div class="container">
+    <hr>
+  </div>
 </div>
 
-<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Visitation Invite</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 700;">12:30pm</span>
-  <div class="spacer"></div>
-  <span style="font-weight: 700;">02/08/2021</span>
-  <div class="spacer"></div>
+<div class="mat-elevation-z20" *ngFor="let invite of invites" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">{{invite.id}}.</span> &nbsp; &nbsp;
+  <span style="font-weight: 700;">You have an invitation for {{invite.time}}pm on {{invite.date | date}}</span>
 </div>
+<div class="container">
+  <div class="container">
+    <hr>
+  </div>
+  <h2>Proposal Status</h2>
+  <div class="container">
+    <hr>
+  </div>
+</div>
+
+<div class="mat-elevation-z20" *ngFor="let prop of proposals" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">{{prop.id}}.</span> &nbsp; &nbsp;
+  <span style="font-weight: 700;">{{prop.proposal_title}}</span>
+  <div class="spacer"></div>
+  <span style="font-weight: 600;">{{prop.status}}</span>
+  <mat-icon *ngIf="prop.status === 'Accepted'" style="margin-right: 10px; color:#198754">done</mat-icon>
+  <mat-icon *ngIf="prop.status === 'Rejected'" style="margin-right: 10px; color:red">close</mat-icon>
+  <mat-icon *ngIf="prop.status === 'Pending'" style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
+</div>
+
+<div class="container">
+  <div class="container">
+    <hr>
+  </div>
+  <h2>Chapter Submission Status</h2>
+  <div class="container">
+    <hr>
+  </div>
+</div>
+
+<div class="mat-elevation-z20" *ngFor="let chapter of chapters" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">{{chapter.id}}.</span> &nbsp; &nbsp;
+  <span style="font-weight: 700;">{{chapter.chapter_number}}</span>
+  <div class="spacer"></div>
+  <span style="font-weight: 600;">{{chapter.status}}</span>
+  <mat-icon *ngIf="chapter.status === 'Accepted'" style="margin-right: 10px; color:#198754">done</mat-icon>
+  <mat-icon *ngIf="chapter.status === 'Rejected'" style="margin-right: 10px; color:red">close</mat-icon>
+  <mat-icon *ngIf="chapter.status === 'Pending'" style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
+</div>
+
 <div class="mb-10"></div>
