--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
         <br>
         <div>
-          <h2>Submit Project Topics</h2>
+          <h2>Submit Proposal Topics</h2>
           <p>Click to submit the desired topic you wish to work on.</p>
         </div>
       </div>
@@ -71,7 +71,7 @@
           <p>View completed projects by previous students</p>
         </div>
       </div>
-      
+
     </div>
   </div>
 </div>
