--- a/src/app/supervisor/review-submissions/review-submissions.component.html
+++ b/src/app/supervisor/review-submissions/review-submissions.component.html
@@ -61,6 +61,6 @@
     </a>
   </span>
 
-  <button class="btn btn-success" (click)="acceptMeet(chapter)"> Accept </button>
-  <button class="btn btn-danger" style="margin-left: 5px;" (click)="rejectMeet(chapter)"> Reject</button>
+  <button class="btn btn-success" (click)="acceptChap(chapter)"> Accept </button>
+  <button class="btn btn-danger" style="margin-left: 5px;" (click)="rejectChap(chapter)"> Reject</button>
 </div>
