--- a/src/app/User/login/login.component.html
+++ b/src/app/User/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="containerr">
-  <div class="containerr">
+<div class="smaller container">
+  <div class="container">
     <div class="card mat-elevation-z20" style="margin-top: 30px;">
       <h1>Login</h1>
       <h3 style="text-align: center;"> Let's Get You In.</h3>
