--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,7 @@ input[type='file'] {
   align-self: start !important  ;
 }
 .smaller {
-  width: 70vw;
+  width: 60vw
 }
 .card {
   color: #1976d2;
